# dibs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.md.in  TYPED.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml
.config/: dodeca.styx
.config/squiggles/: config.styx
.config/tracey/: config.styx
.github/workflows/: ci.yml
.zed/: settings.json
crates/dibs/: Cargo.toml
crates/dibs-cli/src/: lsp_extension.rs  main.rs
crates/dibs-cli/src/lints/: mod.rs  pagination.rs  redundant_param.rs  relation.rs  soft_delete.rs  type_mismatch.rs  unknown_table.rs  unused_param.rs
crates/dibs-cli/tests/lsp/: completions.styx
crates/dibs-db-schema/: Cargo.toml
crates/dibs-db-schema/src/: lib.rs  tests.rs
crates/dibs-qgen/: Cargo.toml
crates/dibs-qgen/src/: error.rs  filter_spec.rs  lib.rs
crates/dibs-qgen/src/fixtures/: queries.styx
crates/dibs-qgen/src/parse/: mod.rs
crates/dibs-qgen/src/planner/: mod.rs  types.rs
crates/dibs-qgen/src/rustgen/: mod.rs  tests.rs
crates/dibs-qgen/src/sqlgen/: common.rs  delete.rs  insert.rs  insert_many.rs  mod.rs  select.rs  tests.rs  update.rs  upsert.rs  upsert_many.rs
crates/dibs-qgen/tests/: postgres_integration.rs
crates/dibs-query-gen/: Cargo.toml
crates/dibs-query-gen/src/: ast.rs  codegen.rs  codegen_refactored.rs  error.rs  filter_spec.rs  lib.rs  parse.rs  planner.rs  schema.rs  sql.rs
crates/dibs-query-gen/src/codegen/: tests.rs
crates/dibs-query-gen/src/fixtures/: queries.styx
crates/dibs-query-gen/src/parse/: mod.rs
crates/dibs-query-gen/src/planner/: mod.rs
crates/dibs-query-gen/src/rustgen/: mod.rs
crates/dibs-query-gen/src/sql/: tests.rs
crates/dibs-query-gen/src/sqlgen/: mod.rs  tests.rs
crates/dibs-query-gen/tests/: postgres_integration.rs
crates/dibs-query-schema/src/: lib.rs  tests.rs
crates/dibs-query-schema/src/fixtures/: queries1.styx  queries2.styx
crates/dibs-sql/: Cargo.toml
crates/dibs-sql/src/: expr.rs  lib.rs  render.rs  stmt.rs
crates/dibs-sql/src/render/: mod.rs  tests.rs
crates/dibs/proptest-regressions/: solver.txt
crates/dibs/src/: diff.rs  lib.rs  schema.rs  solver.rs
crates/dibs/src/schema/: codegen.rs
crates/dibs/tests/: postgres_integration.rs
crates/facet-tokio-postgres/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/spec/: admin.md
docs/static/css/: style.css
docs/templates/: base.html  index.html  page.html  section.html
examples/admin-ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
examples/admin-ui/src/: App.svelte  app.css
examples/my-app-db/: Cargo.toml
examples/my-app-db/src/: lib.rs  main.rs
examples/my-app-db/src/migrations/: m2026_01_18_181821_create_tables.rs  m2026_01_18_185242_lotsa_new_tables.rs  m2026_01_18_193741_lotsa_new_tables.rs  m2026_01_18_203659_more_fkeys.rs  m2026_01_19_110950_singular.rs  m2026_01_19_131928_schema_update.rs  m2026_01_19_132530_schema_update.rs  m2026_01_19_173927_schema_update.rs  mod.rs
examples/my-app-queries/: build.rs  queries.styx
examples/my-app-queries/.dibs-queries/: queries.styx
examples/my-app-workspace/my-app-queries/.dibs-queries/: queries.styx
src/: lib.rs  schema.rs
todo/: 001-DONE-basic-query-parsing.md  001-TODO-schema-definition.md  001-group-by-having.md  001-relation-order-by.md  002-DONE-parameter-binding.md  002-TODO-schema-introspection.md  002-compile-time-validation.md  002-nested-relations.md  003-DONE-pagination.md  003-TODO-schema-diffing.md  003-timestamp-support.md  004-DONE-single-level-joins.md  004-TODO-migration-generation.md  004-bulk-insert.md  004-jsonb-operators.md  005-TODO-migration-execution.md  005-TODO-vec-relation-grouping.md  005-more-filter-operators.md  005-sql-functions.md  006-TODO-query-building.md  006-TODO-relation-where.md  006-distinct.md  007-TODO-relation-order-by.md  008-TODO-count-aggregates.md  008-TODO-migration-solver.md  008-compile-time-validation.md  009-TODO-timestamp-support.md  009-TODO-tui-improvements.md  009-lsp-line-numbers.md  010-TODO-integration-tests.md  010-TODO-jsonb-operators.md  010-lsp-code-actions.md  011-TODO-nested-relations.md  011-lsp-go-to-definition.md  012-TODO-distinct.md  012-codegen-refactor.md  013-TODO-group-by-having.md  014-TODO-compile-time-validation.md  015-TODO-lsp-ide-support.md  ROADMAP.md  (+1 more)
