[package]
name = "dibs-sql"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
blake3.workspace = true
indexmap = "2"
strid = { git = "https://github.com/bearcove/strid", version = "8.0.0" }

[dev-dependencies]
insta = "1"
